# brobot

./: .env.exemple  .env.sh.exemple  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/versions/: 1a71410604aa_create_initial_table.py
api/brobot/: __init__.py  app.py  config.py  database.py  models.py
api/brobot/bot/: agents.py  complete.py  context.py
api/brobot/core/: config.py
api/brobot/dto/: scenario_chapter.py  session_messages.py
api/brobot/services/: scenarios.py  session.py
app/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
app/api/: sessions.ts
app/app/: layout.tsx  page.tsx
app/components/: autoresize-textarea.tsx  main-sidebar.tsx  right-menu.tsx
app/context/: header-context.tsx
app/hooks/: use-chat-service.ts  use-scenarios.ts  use-sessions.ts  use-websocket.ts
app/lib/: models.ts
app/models/: scenario.ts  session.ts
app/utils/: api.ts  messages.ts
brobot/: app.py  cli.py  database.py  models.py
brobot/bot/: agents.py  complete.py
brobot/core/: config.py
brobot/dto/: __init__.py  scenario_with_chapter.py  session_with_scenarios.py
brobot/services/: scenarios.py  session.py
brobot/ws/: manager.py  ws_bot_adapter.py
data/: schema.sql
data/initdb/: 01-init.sql
data/prompts/: generate_scenario.txt
data/scenarios/: introduction-sql.json
docs/: env.md
tests/services/: test_session_service.py
tests/ws/: test_bot_adapter.py  test_connection_manager.py
(+29 files in other folders)
