[project]
name = "brobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "duckdb>=1.2.1",
    "fastapi[all]>=0.115.11",
    "loguru>=0.7.3",
    "openai>=1.68.2",
    "openai-agents>=0.0.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "rich>=13.9.4",
    "sqlmodel>=0.0.24",
    "typer[all]>=0.15.2",
    "websockets>=15.0.1",
    "xata>=1.3.5",
]


[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = false

[tool.setuptools]
packages = ["brobot"]
